# assist

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  pull-request-template.md
.github/ISSUE_TEMPLATE/: 이슈-생성-템플릿.md
.github/workflows/: cr.yml
.prompts/: dev-environment.md  development-convention.md  service-flow-graph-architecture.md  tech-stack-specification.md
.prompts/mvpfeaturelist/: feature-1-ai-skill-lab.md  feature-2-ai-skill-lab.md  feature-3-the-whistle.md
data/chroma/: chroma.sqlite3
data/raw/: drills.json  glossary.json  players.json  shoes.json
src/: main.py
src/api/v1/: router.py
src/api/v1/endpoints/: gear.py  skill.py  whistle.py
src/core/: config.py  constants.py
src/models/: gear_schema.py  response_schema.py  rule_schema.py  skill_schema.py
src/services/: workflow.py
src/services/agents/: coach_agent.py  gear_agent.py  judge_agent.py
src/services/rag/: chroma_db.py  embedding.py  formatters.py  rule_retrieval.py  shoe_retrieval.py  utils.py
src/utils/: file_loader.py  pdf_parser.py
tests/: __init__.py  test_gear_advisor.py  test_whistle.py
