[project]
name = "assist"
version = "0.1.0"
description = "AI-powered basketball assistant for personalized training, gear recommendations, and rule clarifications."
requires-python = ">=3.10"
license = { file = "LICENSE" }
readme = "README.md"
authors = [
  { name = "Yongcheol Shin", email = "yongcheol008@gmail.com" },
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "langgraph",
    "langchain-core",
    "openai",
    "chromadb",
    "python-dotenv",
    "ruff",
]

[project.scripts]
dev = "uvicorn src.main:app --reload --host 0.0.0.0 --port 8000"

[tool.ruff.lint]
# Select linter rules (E: pycodestyle errors, F: Pyflakes, I: isort)
select = ["E", "F", "I"]
line-length = 88 # As per Black standard

[tool.ruff.format]
quote-style = "double"

[tool.uv.sources]
pypi = { url = "https://pypi.org/simple" }
