[project]
name = "assist"
version = "0.1.0"
description = "AI-powered basketball assistant for personalized training, gear recommendations, and rule clarifications."
requires-python = ">=3.10"
license = { file = "LICENSE" }
readme = "README.md"
authors = [
  { name = "Yongcheol Shin", email = "yongcheol008@gmail.com" },
]
dependencies = [
    "fastapi~=0.128",
    "uvicorn[standard]~=0.40",
    "langgraph~=1.0",
    "langchain-core~=1.2",
    "openai~=2.20",
    "chromadb~=1.5",
    "python-dotenv~=1.2",
]

[project.optional-dependencies]
dev = [
    "ruff"
]

[project.scripts]
dev = "uvicorn src.main:app --reload --host 0.0.0.0 --port 8000"

[tool.ruff]
# As per Black standard
line-length = 88

[tool.ruff.lint]
# Select linter rules (E: pycodestyle errors, F: Pyflakes, I: isort)
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
